fixed letter spacing

--- a/app/assets/stylesheets/pages/_match.scss
+++ b/app/assets/stylesheets/pages/_match.scss
@@ -58,11 +58,12 @@
     color:  black;
     width: 220px;
     position: absolute;
-    left: -38px;
     bottom: 78px;
     font-weight: 100px;
     letter-spacing: 3px;
     text-transform: uppercase;
+    text-align: left;
+    margin-left: 23px;
   }
 }
 
